samples/_failures_safe/1761330239_1e89f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b186c968.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_b186c968.c:155:9: error: expected declaration or statement at end of input
  155 |         case TOKEN_OPERATOR: return "OPERATOR";
      |         ^~~~
./samples/SAFE/__tmp_b186c968.c:155:9: error: expected declaration or statement at end of input
